update books issue #3

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,10 +12,10 @@
 
  <h1>Este es mi Blog </h1>
  </header>
- <!-- Contenido -->
+ <!-- Contenido sobre libros -->
  <section>
 <b>Libros</b>
- <p>(Contenido)</p>
+ <p>(El Quijote)</p>
 </section>
  <section>
 <b>Películas</b>
