update movies & books issue#4

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,14 +12,14 @@
 
  <h1>Este es mi Blog </h1>
  </header>
- <!-- Contenido -->
+ <!-- Contenido sobre libros-->
  <section>
 <b>Libros</b>
- <p>(Contenido)</p>
+ <p>(El quijote)</p>
 </section>
  <section>
 <b>Películas</b>
- <p>(Contenido)</p>
+ <p>(Avatar)</p>
  </section>
  <!-- Pie de pagina -->
  <footer>
